[gd_scene load_steps=5 format=3 uid="uid://bpn651twi3mxy"]

[ext_resource type="Script" path="res://src/world/hud.gd" id="1_1bxld"]
[ext_resource type="AudioStream" uid="uid://dkh6t08066ccy" path="res://src/sounds/gameover.mp3" id="2_01t8m"]
[ext_resource type="AudioStream" uid="uid://cvcac1mhohjpq" path="res://src/sounds/bell-1.mp3" id="3_12ebr"]
[ext_resource type="AudioStream" uid="uid://dfhbqig1tdj22" path="res://src/sounds/game-light-bgm.mp3" id="4_1txar"]

[node name="HUD" type="CanvasLayer" node_paths=PackedStringArray("gameoverSound", "blocksFreeSound")]
script = ExtResource("1_1bxld")
gameoverSound = NodePath("GameoverSound")
blocksFreeSound = NodePath("BlocksFreeSound")

[node name="Container" type="HBoxContainer" parent="."]
offset_left = 29.0
offset_right = 212.0
offset_bottom = 60.0

[node name="Score" type="Label" parent="Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Score:"
uppercase = true

[node name="ActualScore" type="Label" parent="Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="Gameover" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -61.5
offset_right = 150.0
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Game Over!

Thank you for playing!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetButton" type="Button" parent="."]
process_mode = 2
visible = false
offset_left = 28.0
offset_top = 53.0
offset_right = 133.0
offset_bottom = 84.0
text = "Restart"

[node name="GameoverSound" type="AudioStreamPlayer3D" parent="."]
process_mode = 3
stream = ExtResource("2_01t8m")
volume_db = 10.0
max_db = 6.0

[node name="BlocksFreeSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_12ebr")
volume_db = 10.0
max_db = 6.0

[node name="BGM" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_1txar")
volume_db = 5.0
max_db = 6.0
autoplay = true

[connection signal="pressed" from="ResetButton" to="." method="_on_button_pressed"]
